# MOPSO_mpi

./: CMakeLists.txt  MOPSO.h  MOPSOAidFunction.cpp  MOPSOFunction.cpp  Makefile  Matrix.h  README.md  addressDef.cpp  applyVariables.cpp  checkSimilarity.cpp  createRep.cpp  disposedCode.cpp  fileDisposal.cpp  freeUpSpace.cpp  initialization.cpp  inputParticles.cpp  main.cpp  matrixFunction.cpp  mpiFunction.cpp  multiplyBetterInput.cpp  paraDef.h  preDispose.cpp  structDef.h
